syntax = "proto3";

package calculator;

option go_package = "github.com/alhaqz/grpc-learn/greet/proto";

message CalculatorRequest {
    int64 first_integer = 1;
    int64 second_integer = 2;
}

message CalculatorResponse {
    int64 sum = 1;
}



service CalculatorService {
    rpc Calculator (CalculatorRequest) returns (CalculatorResponse);
    rpc CalculatorManyTimes (CalculatorRequest) returns (stream CalculatorResponse);
}